--- a/Practice/Registration.html
+++ b/Practice/Registration.html
@@ -58,7 +58,8 @@
                     <td colspan="3"><input type="text"></td>
                 </tr>
                 <tr>
-                    <th colspan="4"><button>Reservation confirm</button> <button>cencle</button></th>
+                    <th colspan="3"><button>Reservation confirm</button></th>
+                    <th colspan="3"><button>cencle</button></th>
                 </tr>
             </table>
         </center>
