--- a/Practice/happynewyear.html
+++ b/Practice/happynewyear.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="msg">happy christmas</div>
+    <div class="msg">Happy new year</div>
 </body>
 </html>
