--- a/Practice/studentreg.html
+++ b/Practice/studentreg.html
@@ -72,7 +72,7 @@
                     <td colspan="3"><input type="tel" name="mobile" id="mobile" placeholder="xxx-xxx-xxxx"></td>
                 </tr>
                 <tr>
-                    <th colspan="3"><button>Register</button></th>
+                    <th colspan="3"><button>Registrasion</button></th>
                     <td colspan="3"><button>cancel</button></td>
                 </tr>
             </table>
