--- a/Practice/makingcard.html
+++ b/Practice/makingcard.html
@@ -17,14 +17,23 @@
             padding: auto;
             margin: auto;
             margin-top: 10px;
-            margin-left: 5px;
-            /* height: 35vh;
-            width: 10vw; */
+            margin-left: 5px; 
+        }
+        .box1 img{
+            border-radius: 5px;
         }
         .button{
             justify-content: center;
             margin-left: 100px;
             
+        }
+        .button button{
+            padding: 4px 7px;
+            font-size: 10px;
+            border-radius: 7px;
+            color: rgb(81, 81, 231);
+            background-color: rgb(174, 174, 232);
+            cursor: pointer;
         }
     </style>
 </head>
