--- a/Assignment/Theory/HTML assignment module-1.html
+++ b/Assignment/Theory/HTML assignment module-1.html
@@ -104,8 +104,8 @@
      <h3>13. What is the use of an iframe tag?</h3>
      <p>Ans:-
           The iframe use to load a another page in the document.</p>
-     <h3r>
-     <h>14. What is the use of a span tag? Explain with example?</h>
+     <hr>
+     <h3>14. What is the use of a span tag? Explain with example?</h3>
      <p>Ans:-
           In use of span tag we can add any tag in the taxt without creating a new line.</p>
      <hr>
